# Whisper-Pi

./: Cargo.toml  README.md
src/: config.rs  layers.rs  main.rs  model.rs  ops.rs
whisper-pi/: Cargo.toml
