[package]
name = "whisper-pi"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.17.2", features = ["blas"] }
ndarray-conv = "0.6.0"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
# blas-src = { version = "0.10", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["system"] } # Links to system installed libopenblas
blas-src = { version = "0.14.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.10.14" }
